2024-01-10T08:18:50Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7472085695 # 10
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-10
* notice: last 14d: unq all: 3 9
* notice: prev accum: outdated-unq outdated-all / unq all: 588 1010 / 593 1018
* notice: next accum: outdated-unq outdated-all / unq all: 588 1010 / 594 1019
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-10]

2024-01-09T16:19:03Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7463832512 # 8
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-09
* notice: last 14d: unq all: 3 8
* notice: prev accum: outdated-unq outdated-all / unq all: 588 1010 / 593 1017
* notice: next accum: outdated-unq outdated-all / unq all: 588 1010 / 593 1018
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-01-09]

2024-01-09T08:18:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7458390598 # 7
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-09
* notice: last 14d: unq all: 3 7
* notice: prev accum: outdated-unq outdated-all / unq all: 587 1009 / 592 1016
* notice: next accum: outdated-unq outdated-all / unq all: 588 1010 / 593 1017
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2023-12-26] / [2024-01-09]

2024-01-08T16:19:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7450190175 # 5