@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-01-10T08:18:50Z",
+  "timestamp" : "2024-01-10T16:19:36Z",
   "count_outdated" : 1010,
   "uniques_outdated" : 588,
-  "count" : 1019,
+  "count" : 1020,
   "uniques" : 594,
   "clones" : [
     {
@@ -43,9 +43,9 @@
     },
     {
       "timestamp": "2024-01-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
