@@ -1,5 +1,5 @@
 {
-  "count": 9,
+  "count": 10,
   "uniques": 3,
   "clones": [
     {
@@ -24,7 +24,7 @@
     },
     {
       "timestamp": "2024-01-10T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
