@@ -1,3 +1,12 @@
+2024-01-10T16:19:36Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7477773298 # 11
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-10
+* notice: last 14d: unq all: 3 10
+* notice: prev accum: outdated-unq outdated-all / unq all: 588 1010 / 594 1019
+* notice: next accum: outdated-unq outdated-all / unq all: 588 1010 / 594 1020
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2024-01-10]
+
 2024-01-10T08:18:50Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7472085695 # 10
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-10
